--- a/index.html
+++ b/index.html
@@ -1,21 +1,23 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-    <title>home design</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Home Design</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="banner">
         <div class="navbar">
-            <img src="logo.png" class="logo">
+            <img src="logo.png" alt="Logo" class="logo">
             <ul>
-                <li><a href="">Home</a></li>
-                <li><a href="">Bedroom</a></li>
-                <li><a href="">dining</a></li>
-                <li><a href="">kitchen</a></li>
-                <li><a href="">backyard</a></li>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Bedroom</a></li>
+                <li><a href="#">Dining</a></li>
+                <li><a href="#">Kitchen</a></li>
+                <li><a href="#">Backyard</a></li>
             </ul>
         </div>
     </div>
-            
 </body>
 </html>
